# chaincue-real-estate-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml
api/: Cargo.toml
api/entity/src/: brokers.rs  countries.rs  house_images.rs  houses.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs
api/src/: main.rs
api/src/configs/: connect_db.rs  init_data.rs  mod.rs
api/src/errors/: errors.rs
api/src/helpers/: entity_helper.rs  mod.rs
api/src/helpers/dto_builder_helpers/: country_helper.rs  house_helper.rs  mod.rs
api/src/middlewares/: errors.rs
api/src/routes/: mod.rs
api/src/routes/account_page/: account_page.rs  mod.rs
api/src/routes/add_property_page/: add_property_page.rs  mod.rs
api/src/routes/home_page/: home_page.rs  mod.rs
api/src/routes/house_page/: house_page.rs  mod.rs
api/src/routes/houses_page/: houses_page.rs  mod.rs
api/src/services/: country_service.rs  house_service.rs  mod.rs
api/src/services/dto_builder_helpers/: country_helper.rs
api/src/tests/: home_page_test.rs  house_page_test.rs  mod.rs
api/src/utilities/: aws_s3_urls.rs  errors.rs  mod.rs
entities/: Cargo.toml
entities/src/: country.rs
entity/: Cargo.toml
entity/src/: brokers.rs  countries.rs  house_images.rs  houses.rs  sea_orm_active_enums.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240409_171941_country.rs  m20240410_170204_house.rs  m20240410_170304_house_image.rs  m20240410_180112_broker.rs
scripts/k8s/: 1notes.md  backend.yml  postgres.yml
src/: main.rs
src/models/: country.rs
(+5 files in other folders)
