[package]
name = "chaincue-real-estate-rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
env_logger = "0.11.3"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
log = "0.4.21"
dotenv = "0.15.0"
migration = { path = "../migration" }

