[package]
name = "chaincue-real-estate-rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
env_logger = "0.11.3"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
log = "0.4.21"
dotenv = "0.15.0"
migration = { path = "../migration" }
entity = { path = "../entity" }
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
chrono = "0.4.37"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
